Revert custom topic configurations
Signed-off-by: Michael Edgar <medgar@redhat.com>