@@ -8,7 +8,6 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import org.apache.kafka.common.config.TopicConfig;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -213,10 +212,7 @@ class TopicCommandTest extends ClikMainTestBase implements TestRecordProducer {
     void testDescribeTopicWithOffsets(String offsets1, String offsets2, int messageCount, String messageInterval,
             String expected1, String expected2, String expected3) throws Exception {
 
-        topicService.createTopic(admin(), "describe-offsets", 10, 1, Map.of(
-                TopicConfig.FLUSH_MESSAGES_INTERVAL_CONFIG, "1",
-                TopicConfig.INDEX_INTERVAL_BYTES_CONFIG, "128"
-        ));
+        topicService.createTopic(admin(), "describe-offsets", 10, 1, Collections.emptyMap());
         var baseTime = Instant.now().minus(Duration.ofDays(101));
 
         produceMessagesWithTimestamps("describe-offsets",
